--- a/MyApplication/app/src/main/res/layout/activity_preference_detail.xml
+++ b/MyApplication/app/src/main/res/layout/activity_preference_detail.xml
@@ -20,9 +20,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
-            android:text="Your ideal type"
+            android:text="Your Ideal Type"
             android:textColor="#000000"
-            android:textSize="48sp"
+            android:textSize="28sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,13 +31,13 @@
             android:id="@+id/Alcohol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:text="Alcohol"
+            android:layout_marginTop="44dp"
+            android:text="Alcohol 🍺"
             android:textColor="#000000"
-            android:textSize="20sp"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.145"
+            app:layout_constraintHorizontal_bias="0.163"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ProfileDetails" />
 
@@ -58,12 +58,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/element_spacing"
-            android:text="Smoking"
+            android:text="Smoking 🚬"
             android:textColor="#000000"
-            android:textSize="20sp"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.15"
+            app:layout_constraintHorizontal_bias="0.172"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/alcohol_menu" />
 
@@ -85,12 +85,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/element_spacing"
-            android:text="Marijuana"
+            android:text="Weed 🍃"
             android:textColor="#000000"
-            android:textSize="20sp"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.157"
+            app:layout_constraintHorizontal_bias="0.152"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/smoking_menu" />
 
@@ -111,12 +111,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/element_spacing"
-            android:text="Preferred diet"
+            android:text="Preferred diet 🍜"
             android:textColor="#000000"
-            android:textSize="20sp"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.181"
+            app:layout_constraintHorizontal_bias="0.212"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/Marijuana_menu" />
 
@@ -125,10 +125,10 @@
             android:layout_width="276dp"
             android:layout_height="48dp"
             android:layout_marginTop="@dimen/between_elements_spacing"
-            android:entries="@array/food"
             android:background="@drawable/rounded_spinner"
+            android:entries="@array/food"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.377"
+            app:layout_constraintHorizontal_bias="0.355"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/FavoriteFood" />
 
@@ -136,7 +136,7 @@
             android:id="@+id/confirm_button"
             android:layout_width="309dp"
             android:layout_height="60dp"
-            android:layout_marginTop="@dimen/logo_to_first_element_margin"
+            android:layout_marginTop="100sp"
             android:background="@drawable/pink_rounded"
             android:text="Confirm"
             android:textColor="#ffffff"
