--- a/MyApplication/app/src/main/res/layout/activity_profilethreeclone.xml
+++ b/MyApplication/app/src/main/res/layout/activity_profilethreeclone.xml
@@ -19,12 +19,12 @@
             android:id="@+id/Tellus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="Tell us about yourself"
+            android:layout_marginTop="44dp"
+            android:text="Tell Us About Yourself"
             android:textColor="#000000"
             android:textSize="28sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.451"
+            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,13 +32,13 @@
             android:id="@+id/Alcohol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:text="Alcohol"
-            android:textStyle="bold"
+            android:layout_marginTop="44dp"
+            android:text="Alcohol 🍺"
             android:textColor="#000000"
             android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.145"
+            app:layout_constraintHorizontal_bias="0.163"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/Tellus" />
 
@@ -59,12 +59,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/element_spacing"
-            android:text="Smoking"
-            android:textStyle="bold"
+            android:text="Smoking 🚬"
             android:textColor="#000000"
             android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.15"
+            app:layout_constraintHorizontal_bias="0.172"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/alcohol_menu" />
 
@@ -75,7 +75,7 @@
             android:layout_marginTop="@dimen/between_elements_spacing"
             android:entries="@array/options"
             android:background="@drawable/rounded_spinner"
-            android:hint="Smoking"
+            android:hint="Smoking 🚬"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.355"
             app:layout_constraintStart_toStartOf="parent"
@@ -86,12 +86,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/element_spacing"
-            android:text="Marijuana"
-            android:textStyle="bold"
+            android:text="Weed 🍃"
             android:textColor="#000000"
             android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.157"
+            app:layout_constraintHorizontal_bias="0.152"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/smoking_menu" />
 
@@ -112,12 +112,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/element_spacing"
-            android:text="Preferred diet"
-            android:textStyle="bold"
+            android:text="Preferred diet 🍜"
             android:textColor="#000000"
             android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.181"
+            app:layout_constraintHorizontal_bias="0.212"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/Marijuana_menu" />
 
@@ -137,7 +137,7 @@
             android:id="@+id/confirm_button"
             android:layout_width="309dp"
             android:layout_height="60dp"
-            android:layout_marginTop="168dp"
+            android:layout_marginTop="200dp"
             android:background="@drawable/pink_rounded"
             android:text="Confirm"
             android:textColor="#ffffff"
