--- a/MyApplication/app/src/main/res/layout/activity_change_page.xml
+++ b/MyApplication/app/src/main/res/layout/activity_change_page.xml
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Profile Setup"
+            android:textColor="#000000"
             android:textSize="24sp"
             android:textStyle="bold"
             android:layout_gravity="center_horizontal"/>
@@ -25,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Let's add some photos to your profile!"
+            android:textColor="#000000"
             android:layout_gravity="center_horizontal"/>
 
 
