--- a/MyApplication/app/src/main/res/layout/activity_change_photo.xml
+++ b/MyApplication/app/src/main/res/layout/activity_change_photo.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Profile Setup"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"/>
@@ -19,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="You Can Add, Change or Remove Your Photos Here"
+        android:textColor="#000000"
         android:layout_gravity="center_horizontal"/>
 
     <!-- Image placeholders -->
