--- a/MyApplication/app/src/main/res/layout/activity_profiledetailone.xml
+++ b/MyApplication/app/src/main/res/layout/activity_profiledetailone.xml
@@ -5,26 +5,26 @@
     android:layout_height="match_parent"
     android:background="@drawable/profile_gradient">
 
-<TextView
+    <!-- 80% of parent's width -->
+
+    <TextView
         android:id="@+id/Tellus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Tell us about yourself"
+        android:layout_marginTop="72dp"
+        android:text="Tell Us About Yourself"
         android:textColor="#000000"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.451"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <!-- 80% of parent's width -->
 
     <TextView
         android:id="@+id/FirstName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="56dp"
         android:text="First Name"
         android:textColor="#000000"
         android:textSize="24sp"
