--- a/MyApplication/app/src/main/res/layout/activity_profileoneclone.xml
+++ b/MyApplication/app/src/main/res/layout/activity_profileoneclone.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="Tell us about yourself"
+        android:text="Tell Us About Yourself"
         android:textColor="#000000"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
