--- a/MyApplication/app/src/main/res/layout/activity_signup.xml
+++ b/MyApplication/app/src/main/res/layout/activity_signup.xml
@@ -102,11 +102,13 @@
         android:layout_marginTop="108dp"
         android:background="@drawable/signup_rectangle"
         android:hint="Enter Password"
+        android:inputType="textPassword"
+        android:padding="8dp"
         android:lines="1"
         android:maxLines="1"
         android:minHeight="48dp"
         android:textColor="#000000"
-        android:textSize="18sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView1"
