--- a/MyApplication/app/src/main/res/layout/camera.xml
+++ b/MyApplication/app/src/main/res/layout/camera.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Profile Setup"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"/>
@@ -19,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Let's add some photos to your profile!"
+        android:textColor="#000000"
         android:layout_gravity="center_horizontal"/>
 
     <!-- Image placeholders -->
