--- a/MyApplication/app/src/main/res/layout/item.xml
+++ b/MyApplication/app/src/main/res/layout/item.xml
@@ -30,7 +30,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:id="@+id/image"
-                android:scaleType="centerCrop">
+                android:scaleType="centerCrop"
+                android:src="@drawable/logo">
 
             </ImageView>
             <TextView
