--- a/MyApplication/app/src/main/res/layout/activity_simplechat.xml
+++ b/MyApplication/app/src/main/res/layout/activity_simplechat.xml
@@ -71,6 +71,12 @@
             android:layout_height="wrap_content"
             android:text="send"
             android:background="@drawable/pink_rounded"/>
+        <TextView
+            android:id="@+id/message_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:textColor="#000000" />
     </LinearLayout>
 
 </RelativeLayout>
