--- a/MyApplication/app/src/main/res/layout/more_info.xml
+++ b/MyApplication/app/src/main/res/layout/more_info.xml
@@ -102,6 +102,16 @@
             android:fontFamily="sans-serif-medium"
             android:text="Alcohol: [alcohol]"
             android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/textViewFood"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="Food: [food]"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </RelativeLayout>
