--- a/MyApplication/app/src/main/res/layout/activity_confirmation.xml
+++ b/MyApplication/app/src/main/res/layout/activity_confirmation.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/logo_to_first_element_margin"
         android:gravity="start"
-        android:text="Please Enter The Code Sent To Your Email:"
+        android:text="Please Check your Email"
         android:textColor="#000000"
         android:textSize="17sp"
         android:textStyle="bold"
@@ -38,7 +38,7 @@
         android:padding="8dp"
         android:background="@drawable/signup_rectangle"
         android:inputType="text|textNoSuggestions"
-        android:hint="Enter Code"
+        android:hint="wait... i guess... lol"
         android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,19 +48,37 @@
         android:layout_marginTop="@dimen/between_elements_spacing" />
 
     <Button
+        android:id="@+id/resendCode"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_rectangle"
+        android:minHeight="48dp"
+        android:text="Resend Email"
+        android:textColor="#ffffff"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499"
+        app:layout_constraintWidth_percent="0.8" />
+
+    <Button
         android:id="@+id/button2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:minHeight="48dp"
         android:background="@drawable/rounded_rectangle"
-        android:text="LOG IN"
+        android:minHeight="48dp"
+        android:text="Continue"
         android:textColor="#ffffff"
         android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.8"
-        app:layout_constraintVertical_bias="0.9" />
+        app:layout_constraintVertical_bias="0.901"
+        app:layout_constraintWidth_percent="0.8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
